# pyrbuz

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  suika.py
pygame_version/: _capture.py  collision.py  config.py  config.yaml  main.py  particle.py  text.py  wall.py
