[tool.poetry]
name = "pysuika"
version = "0.1.0"
description = ""
authors = ["BlekDom <dominikblek86@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
pillow = "^10.4.0"
numpy = "^2.0.1"
pymunk = "^6.8.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py312"]
